<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_manager_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:padding="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" >

            <TextView
                android:id="@+id/create_sh_player"
                android:text="New Player"
                android:fontFamily="@font/chivo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_sh_player" >

                <EditText
                    android:id="@+id/first_name_shp_create"
                    android:layout_width="match_parent"
                    android:hint="@string/first_name_text"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_til_shp_create" >

                <EditText
                    android:id="@+id/last_name_shp_create"
                    android:layout_width="match_parent"
                    android:hint="@string/last_name_text"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/position_spinner_shp_create"
                android:layout_below="@+id/last_name_til_shp_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/position_array"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nationality_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/position_spinner_shp_create" >

                <EditText
                    android:id="@+id/nationality_shp_create"
                    android:layout_below="@+id/potential_low_shp_create"
                    android:layout_width="match_parent"
                    android:hint="@string/nationality_text"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/overall_til_shp_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nationality_til_shp_create">

                <EditText
                    android:id="@+id/overall_shp_create"
                    android:layout_width="80dp"
                    android:hint="@string/overall"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/potential_low_til_shp_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nationality_til_shp_create"
                android:layout_toStartOf="@+id/potential_high_til_shp_create">

                <EditText
                    android:id="@+id/potential_low_shp_create"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:hint="Pot. Low"
                    android:fontFamily="@font/chivo"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/potential_high_til_shp_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nationality_til_shp_create"
                android:layout_alignParentEnd="true" >

                <EditText
                    android:id="@+id/potential_high_shp_create"
                    android:layout_marginStart="8dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:hint="Pot. High"
                    android:fontFamily="@font/chivo"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/team_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overall_til_shp_create" >

                <EditText
                    android:id="@+id/team_shp_create"
                    android:layout_width="match_parent"
                    android:hint="@string/team_text"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/value_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/team_til_shp_create" >

                <EditText
                    android:id="@+id/value_shp_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value"
                    android:fontFamily="@font/chivo"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wage_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/value_til_shp_create" >

                <EditText
                    android:id="@+id/wage_shp_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo"
                    android:hint="@string/wage"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comments_til_shp_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wage_til_shp_create" >

                <EditText
                    android:id="@+id/comments_shp_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comments"
                    android:fontFamily="@font/chivo"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_sh_player_button"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_til_shp_create"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/chivo"
                android:text="@string/create_player"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>